All API's Created and updated

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -165,7 +165,7 @@
 </head>
 <body>
   <header>
-    <div class="welcome-text">👋 Welcome, {{ teacher_name }}</div>
+    <div class="welcome-text">Welcome, {{ teacher_name }}</div>
     <div class="header-buttons">
       <button onclick="window.location.href='/create-quiz'">
         <i class="fas fa-plus-circle"></i> Create Quiz
